// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ng-update TuiInputTagComponent usage TODO inserts a TODO above @ViewChild(TuiInputTagComponent): test.ts 1`] = `
{
  "0. Before": "
                import {Component, ElementRef, ViewChild} from '@angular/core';
                import {TuiInputTagComponent} from '@taiga-ui/legacy';

                @Component({template: ''})
                export class Test {
                    @ViewChild(TuiInputTagComponent, {static: true})
                    public inputTag!: TuiInputTagComponent;

                    public get input(): unknown {
                        return this.inputTag.nativeFocusableElement;
                    }
                }
            ",
  "1. After": "
                import {Component, ElementRef, ViewChild} from '@angular/core';
                import {TuiInputTagComponent} from '@taiga-ui/legacy';

                @Component({template: ''})
                export class Test {
// TODO: (Taiga UI migration) TuiInputTagComponent has been removed with no drop-in class replacement. <tui-input-tag> now migrates to <tui-textfield multi> with <input tuiInputChip>, which is a directive on <input> — there is no component to @ViewChild/inject. Add a template ref to the migrated <input tuiInputChip>, query it with @ViewChild(ref, {read: ElementRef}) and replace \`.nativeFocusableElement\` with \`.nativeElement\`. See https://taiga-ui.dev/components/input-chip
                    @ViewChild(TuiInputTagComponent, {static: true})
                    public inputTag!: TuiInputTagComponent;

                    public get input(): unknown {
                        return this.inputTag.nativeFocusableElement;
                    }
                }
            ",
}
`;

exports[`ng-update TuiInputTagComponent usage TODO inserts a TODO above an inject(TuiInputTagComponent) usage: test.ts 1`] = `
{
  "0. Before": "
                import {Component, inject} from '@angular/core';
                import {TuiInputTagComponent} from '@taiga-ui/legacy';

                @Component({template: ''})
                export class Test {
                    private readonly inputTag = inject(TuiInputTagComponent);
                }
            ",
  "1. After": "
                import {Component, inject} from '@angular/core';
                import {TuiInputTagComponent} from '@taiga-ui/legacy';

                @Component({template: ''})
                export class Test {
// TODO: (Taiga UI migration) TuiInputTagComponent has been removed with no drop-in class replacement. <tui-input-tag> now migrates to <tui-textfield multi> with <input tuiInputChip>, which is a directive on <input> — there is no component to @ViewChild/inject. Add a template ref to the migrated <input tuiInputChip>, query it with @ViewChild(ref, {read: ElementRef}) and replace \`.nativeFocusableElement\` with \`.nativeElement\`. See https://taiga-ui.dev/components/input-chip
                    private readonly inputTag = inject(TuiInputTagComponent);
                }
            ",
}
`;
